--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
         "name": "Discord 消息推送",
         "description": "添加discord消息推送",
         "version": "1.0",
-        "icon": "discord.png",
-        "color": "#5A65EA",
+        "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins-discord/main/icons/discord.png",
+        "color": "#3B5E8E",
         "author": "hankun",
         "level": 1
     }
