--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
         "color": "#32699D",
         "author": "hankun",
         "level": 1
+    },
+    "Bangumi": {
+        "name": "Bangumi 同步",
+        "description": "动漫资源引用Bangumi评分，同步订阅/库存番剧到Bangumi",
+        "version": "0.1",
+        "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/bangumi.jpg",
+        "color": "#5378A4",
+        "author": "hankun",
+        "level": 1
     }
 }
