--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "Bangumi": {
         "name": "Bangumi 同步",
         "description": "动漫资源引用Bangumi评分，同步订阅/库存番剧到Bangumi",
-        "version": "1.0.7",
+        "version": "1.0.8",
         "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/bangumi.jpg",
         "color": "#5378A4",
         "author": "hankun",
@@ -28,7 +28,7 @@
     },
     "BDRemuxer": {
         "name": "BD Remuxer",
-        "description": "自动提取BDMV文件夹中的视频流和音频流，合并为MKV文件",
+        "description": "自动提取BDMV文件夹中的视频流和音频流，合并为MKV文件。开发中，请勿安装",
         "version": "0.1",
         "icon": "",
         "color": "#5378A4",
