--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     },
     "BDRemuxer": {
         "name": "BD Remuxer",
-        "description": "自动提取BDMV文件夹中的视频流和音频流，合并为MKV文件。开发中，请勿安装",
-        "version": "0.5",
+        "description": "使用ffmpeg自动提取BDMV文件夹中的视频流和音频流，合并为MKV文件。低性能设备不推荐使用",
+        "version": "1.0",
         "icon": "",
         "color": "#5378A4",
         "author": "hankun",
