--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     },
     "Danmu": {
         "name": "弹幕刮削",
-        "description": "使用弹弹play平台生成弹幕的字幕文件，实现弹幕播放。还在开发 请勿使用 以免炸库",
+        "description": "使用弹弹play平台生成弹幕的字幕文件，实现弹幕播放。",
         "version": "1.0.0",
         "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/danmu.png",
         "color": "#3B5E8E",
