--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "Danmu": {
         "name": "弹幕刮削",
         "description": "使用弹弹play平台生成弹幕的字幕文件，实现弹幕播放。",
-        "version": "1.0.1",
+        "version": "1.0.2",
         "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/danmu.png",
         "color": "#3B5E8E",
         "author": "hankun",
         "level": 1,
         "history": {
+            "v1.0.2": "修复合并字幕命名错误。",
             "v1.0.1": "修复ffmpeg有时候解码错误。",
             "v1.0.0": "基本功能实现，暂时不支持srt字幕。",
             "v0.0.1": "新增插件，功能测试，开发中"
