--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "author": "hankun",
         "level": 1,
         "history": {
+            "v1.0.9": "移除定期全局刮削，如果有需要请使用 设置->服务 手动启动全局刮削。刮削过于频繁会导致IP被封。",
             "v1.0.8": "修复弹幕时长设为10以上时无法生成弹幕",
             "v1.0.7": "修复cron表达式修改后无法应用",
             "v1.0.6": "提取内嵌字幕时自动识别并选择中文字幕（如果可用的话",
