--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
         "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/discord.png",
         "color": "#3B5E8E",
         "author": "hankun",
+        "v2": false,
+        "level": 1
+    },
+    "Discordv2": {
+        "name": "Discord 消息推送",
+        "description": "添加discord消息推送",
+        "version": "1.0",
+        "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/discord.png",
+        "color": "#3B5E8E",
+        "author": "hankun",
         "v2": true,
         "level": 1
     },
