--- a/package.json
+++ b/package.json
@@ -2,22 +2,15 @@
     "Discord": {
         "name": "Discord 消息推送",
         "description": "添加discord消息推送",
-        "version": "1.4.6",
-        "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/discord.png",
-        "color": "#3B5E8E",
-        "author": "hankun",
-        "v2": false,
-        "level": 1
-    },
-    "Discordv2": {
-        "name": "Discord 消息推送",
-        "description": "添加discord消息推送",
-        "version": "1.0",
+        "version": "1.5.0",
         "icon": "https://raw.githubusercontent.com/HankunYu/MoviePilot-Plugins/main/icons/discord.png",
         "color": "#3B5E8E",
         "author": "hankun",
         "v2": true,
-        "level": 1
+        "level": 1,
+        "history":{
+            "v1.5.0": "增加对v2的支持"
+        }
     },
     "RmCdata": {
         "name": "Infuse nfo 简介修复",
