--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,10 @@ json.py
 
 ignore/
 test_danmu.py
+
+# Claude Code files
+CLAUDE.md
+.claude/
+claude-*
+.claude-*
+plugins.v2/IdentifierHelper/node_modules
